k8s/etl-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: etl-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: etl
  template:
    metadata:
      labels:
        app: etl
    spec:
      containers:
        - name: etl
          image: souravdeveloper/ecom-etl
---
apiVersion: v1
kind: Service
metadata:
  name: etl-srv
spec:
  selector:
    app: etl
  type: ClusterIP
  ports:
    - name: etl
      targetPort: 4000
      port: 4000
      protocol: TCP
