k8s/mfe-dashboard-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mfe-dashboard-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mfe-dashboard
  template:
    metadata:
      labels:
        app: mfe-dashboard
    spec:
      containers:
        - name: mfe-dashboard
          image: souravdeveloper/ecom-mfe-dashboard
          ports:
            - containerPort: 3000  
---
apiVersion: v1
kind: Service
metadata:
  name: mfe-dashboard-srv
spec:
  selector:
    app: mfe-dashboard
  type: ClusterIP
  ports:
    - name: mfe-dashboard
      targetPort: 3000
      port: 3000
      protocol: TCP
