k8s/mfe-shared-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mfe-shared-depl
  labels:
    app: mfe-shared
spec:
  replicas: 2
  selector:
    matchLabels:
      app: mfe-shared
  template:
    metadata:
      labels:
        app: mfe-shared
    spec:
      containers:
        - name: mfe-shared
          image: souravdeveloper/ecom-mfe-shared
          ports:
            - containerPort: 3003
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "200m"
          livenessProbe:
            httpGet:
              path: /
              port: 3003
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 3003
            initialDelaySeconds: 5
            periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: mfe-shared-srv
  labels:
    app: mfe-shared
spec:
  selector:
    app: mfe-shared
  ports:
    - name: mfe-shared
      protocol: TCP
      port: 3003
      targetPort: 3003
  type: ClusterIP
