k8s/order-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order
  template:
    metadata:
      labels:
        app: order
    spec:
      containers:
        - name: order
          image: souravdeveloper/ecom-order
          ports:
            - containerPort: 4000
---
apiVersion: v1
kind: Service
metadata:
  name: order-srv
spec:
  selector:
    app: order
  type: NodePort
  ports:
    - name: order
      targetPort: 4000
      port: 4000
      protocol: TCP
