k8s/product-redis-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-redis-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: product-redis
  template:
    metadata:
      labels:
        app: product-redis
    spec:
      containers:
        - name: product-redis
          image: redis:alpine
          ports:
            - containerPort: 6379
          volumeMounts:
            - mountPath: /data
              name: redis-storage
      volumes:
        - name: redis-storage
          persistentVolumeClaim:
            claimName: redis-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: product-redis-service
spec:
  type: ClusterIP
  selector:
    app: product-redis
  ports:
    - name: product-redis
      protocol: TCP
      port: 6379
      targetPort: 6379
