k8s/rabbitmq-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rabbitmq
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      containers:
        - name: rabbitmq
          image: rabbitmq:3.13-rc-management-alpine
          readinessProbe:
            tcpSocket:
              port: 5672
            periodSeconds: 2
            timeoutSeconds: 2
---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-srv
spec:
  selector:
    app: rabbitmq
  type: ClusterIP
  ports:
    - name: rabbitmq
      targetPort: 5672
      port: 5672
      protocol: TCP
    - name: rabbitmq-admin
      targetPort: 15672
      port: 15672
      protocol: TCP
