k8s/review-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: review-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: review
  template:
    metadata:
      labels:
        app: review
    spec:
      containers:
        - name: review
          image: souravdeveloper/ecom-review
---
apiVersion: v1
kind: Service
metadata:
  name: review-service
spec:
  selector:
    app: review
  type: ClusterIP
  ports:
    - name: review
      port: 4000
      targetPort: 4000
      protocol: TCP
