k8s/review-postgres-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: review-postgres-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: review-postgres
  template:
    metadata:
      labels:
        app: review-postgres
    spec:
      containers:
        - name: postgres
          image: postgres:13
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data
              # subPath: postgres
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: postgres-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: review-postgres-service
spec:
  selector:
    app: review-postgres
  type: NodePort
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
