k8s/user-client-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-client-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-client
  template:
    metadata:
      labels:
        app: user-client
    spec:
      containers:
        - name: user-client
          image: souravdeveloper/ecom-user-client
---
apiVersion: v1
kind: Service
metadata:
  name: user-client-srv
spec:
  selector:
    app: user-client
  type: ClusterIP
  ports:
    - name: user-client
      protocol: TCP
      port: 3000
      targetPort: 3000
